Wed Apr 23 23:27:44 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/sets.c: fixed a bug introduced in the last commit
	* libxslt/transform.c: tried to fix #111437
	* tests/docbook/result/xtchunk/html/*.orig
	  tests/multiple/out/*.orig: side effect of #111437 change.

Wed Apr 23 22:41:08 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/strings.c: applied last patch for #110023 from 
	  Mark Vakoc
	* libexslt/sets.c: fixed a memory leak when mixing one of the
	  EXSLT set functions and a Result Value Tree
	* TODO: there are other bugs around in libexslt/sets.c in conjunction
	  with Result Value Tree

Wed Apr 23 17:00:16 CEST 2003 Daniel Veillard <daniel@veillard.com>

	*  libxslt/extensions.c: patch from Vasily Tchekalkin fixing
	   bug #111420 about double initialization of extension contexts

Wed Apr 23 14:25:46 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fix bug #110577 namespace in copy-of
	  don't obbey the same rules as for literal reusl elements.
	* tests/docs/Makefile.am tests/docs/bug-118.*
	  tests/general/Makefile.am tests/general/bug-118*: added the
	  example in the regression tests for that bug.
	* libxslt/variables.c: fixed a bug introduced in fixing #110020
	* tests/docs/Makefile.am tests/docs/bug-11[67].*
	  tests/general/Makefile.am tests/general/bug-11[67]*: added 2
	  regression tests one still exposing a mem leak (Mark Vadoc).

Tue Apr 22 16:01:25 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fix a memory related segfault on a
	  pattern compilation error #110189

Tue Apr 22 15:45:25 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixing bug #110020 on global parameter
	  and variables mismatch
	* tests/reports/Makefile.am tests/reports/cmdlineparams.*: added
	  the test to the regression suite

Mon Apr 21 12:22:31 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/math.c: applied patch from Charles Bozeman fixing