@@ -90,10 +90,7 @@ The input document is an HTML file.
 
 .TP
 \fB--docbook\fR
-The input document is DocBook SGML.
-Do not use the --docbook option of xsltproc to process XML DocBook
-documents, this option is only intended to provide some (limited) support
-of the SGML version of DocBook.
+The input document is DocBook SGML. Do not use the --docbook option of xsltproc to process XML DocBook documents, this option is only intended to provide some (limited) support of the SGML version of DocBook.
 
 .TP
 \fB--param\fR \fIname\fR \fIvalue\fR
@@ -182,4 +179,4 @@ libxml web page:: http://www.xmlsoft.org/http://www.xmlsoft.org/
 W3C XSLT page:: http://www.w3.org/TR/xslthttp://www.w3.org/TR/xslt
 
 .SH AUTHOR
-.
+John Fleck.
